[gd_scene load_steps=5 format=3 uid="uid://vxct5up0qat6"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_6rxo3"]
[ext_resource type="Script" path="res://scripts/scene_manager.gd" id="2_78b6v"]
[ext_resource type="PackedScene" uid="uid://b37fnxin6vqiw" path="res://assets/lose_menu/lose_menu.tscn" id="3_h3yvm"]
[ext_resource type="PackedScene" uid="uid://dgwb4sw0qgunt" path="res://assets/scene_transition_shade/scene_transition_shade.tscn" id="4_d4j5u"]

[node name="Game" type="Node2D"]
script = ExtResource("1_6rxo3")

[node name="SceneManager" type="Node2D" parent="."]
z_index = -1
script = ExtResource("2_78b6v")

[node name="LoseMenu" parent="." instance=ExtResource("3_h3yvm")]
visible = false

[node name="SceneTransitionShade" parent="." instance=ExtResource("4_d4j5u")]
top_level = true
z_index = 4096

[connection signal="player_lost" from="SceneManager" to="." method="_on_scene_manager_player_lost"]
[connection signal="scene_changed" from="SceneManager" to="." method="_on_scene_manager_scene_changed"]
[connection signal="scene_changing" from="SceneManager" to="." method="_on_scene_manager_scene_changing"]
[connection signal="exit" from="LoseMenu" to="." method="_on_lose_menu_exit"]
[connection signal="retry" from="LoseMenu" to="." method="_on_lose_menu_retry"]
[connection signal="entrance_finished" from="SceneTransitionShade" to="." method="_on_scene_transition_shade_entrance_finished"]
